--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,17 @@
-.Rproj.user
-.Rhistory
-.RData
-.Ruserdata
+
+notebooks/aizarani_integration_hepatocytes.RData
+notebooks/*md
 notebooks/*html
-notebooks/*rds
-scripts/*sif
-data/GEO/
-data/reads/
-notebooks/aizarani_files/
+out/
 scripts/database.conf
-scripts/rstudio-tmp/
-data/references/
-scripts/.bash_history
+scripts/rstudio-tmp
+notebooks/*gz
+notebooks/.Rhistory
+notebooks/.Rproj.user
+data/GEO
+figures/
+notebooks/*files
+data/reads
+notebooks/rendered
+notebooks/cache
+notebooks/notebooks.Rproj
